[package]
name = "soft_ratatui"
version = "0.0.8"
edition = "2024"
authors = ["gold-silver-copper"]

include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

description = "Software rendering for ratatui. TUI everywhere."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/soft_ratatui"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

embedded-graphics = "0.8.1"
embedded-graphics-unicodefonts = "0.2.0"
ratatui = { version = "0.29.0", default-features = false }


[profile.release]
#opt-level = 1
#lto = true # Enable link-time optimization
#codegen-units = 1 # Better optimizations, slightly slower compile
#panic = "abort"   # Smaller binary if you don't need backtraces
#strip = "symbols" # Remove debug symbols (unless you need them)

# Uncomment this for even smaller output (disable debug info)
#debug = true
