[package]
name = "egui_example"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.4"
eframe = "0.31.1"
itertools = "0.14.0"
palette = "0.7.6"
ratatui = "0.29.0"
soft_ratatui = { path = ".." }
[profile.release]
opt-level = 3
#lto = true # Enable link-time optimization
#odegen-units = 1 # Better optimizations, slightly slower compile
#panic = "abort"   # Smaller binary if you don't need backtraces
#strip = "symbols" # Remove debug symbols (unless you need them)

# Uncomment this for even smaller output (disable debug info)
#debug = true
